validation update
